--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,24 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-core</artifactId>
+      <version>1.4.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-web</artifactId>
+      <version>1.4.1</version>
+    </dependency>
+
+    <!-- shiro整合spring的jar包-->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.4.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -182,6 +200,7 @@
         <directory>src/main/resources</directory>
         <includes>
           <include>*.xml</include>
+          <include>*.properties</include>
         </includes>
       </resource>
     </resources>
