--- a/pdlg-web/src/main/webapp/WEB-INF/web.xml
+++ b/pdlg-web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,9 @@
 
   <display-name>Archetype Created Web Application</display-name>
 
+  <!-- 欢迎页面-->
+
+
   <!-- 启动监听器  初始化 spring核心容器  -->
   <!-- 配置spring配置文件所在的路径 -->
   <context-param>
@@ -69,4 +72,5 @@
     <filter-name>shiroFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
 </web-app>
