--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.4</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-core</artifactId>
@@ -184,6 +185,11 @@
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-spring</artifactId>
+      <version>1.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-ehcache</artifactId>
       <version>1.4.1</version>
     </dependency>
   </dependencies>
