--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,13 @@
       <artifactId>shiro-ehcache</artifactId>
       <version>1.4.1</version>
     </dependency>
+
+    <!-- 支付宝依赖 -->
+    <dependency>
+      <groupId>com.alipay.sdk</groupId>
+      <artifactId>alipay-sdk-java</artifactId>
+      <version>4.10.167.ALL</version>
+    </dependency>
   </dependencies>
 
   <build>
